backend/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fasttrack-api
spec:
  selector:
    app: fasttrack-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
